# MaClaw

./: .gitattributes  .gitignore  README.md  README_EN.md  REMOTE_QUICKSTART.md  TASK 1 WeChat Multi-Device Communication in Hub Mo.md  UserManual_CN.md  UserManual_EN.md  android_pwa_shell.go  android_pwa_shell_test.go  app.go  app_clawnet.go  app_maclaw_llm.go  app_nl_mcp.go  app_nl_skills.go  app_swarm_bindings.go  app_wails_bindings.go  audit_log.go  audit_log_test.go  build_installer.bat  build_maclinux.sh  build_release.sh  build_remote_stack.cmd  build_win.bat  build_win_cgo.bat  build_win_tiger.bat  capability_gap_detector.go  check_remote_stack.cmd  clawnet_auto_task_picker.go  clawnet_client.go  clawnet_client_test.go  clawnet_installer.go  clean_remote_stack.cmd  common.go  config_manager.go  context_bridge.go  conversation_archiver.go  deploy_all.cmd  experience_extractor.go  faq.md  (+149 more)
.github/workflows/: main.yml  rapidspeech.yml
RapidSpeech.cpp/: CMakeLists.txt  README-CN.md  README.md
RapidSpeech.cpp/cmake/: rapidspeech-config.cmake.in
RapidSpeech.cpp/docs/: deployment.md
RapidSpeech.cpp/include/: rapidspeech.h
RapidSpeech.cpp/rapidspeech/python/: pybind_rapidspeech.cpp
RapidSpeech.cpp/rapidspeech/src/arch/: ecapa_tdnn.cpp  ecapa_tdnn.h  moonshine.cpp  moonshine.h
RapidSpeech.cpp/rapidspeech/src/c_api/: rapidspeech_c.cpp
RapidSpeech.cpp/rapidspeech/src/core/: rs_model.h  rs_processor.cpp  rs_processor.h
RapidSpeech.cpp/rapidspeech/src/utils/: rs_log.h  rs_wav.h
RapidSpeech.cpp/scripts/: _debug_encoder_compare.py  _debug_encoder_layer_diff.py  check_zh_vocab.py  convert_ecapa_tdnn.py  convert_moonshine.py  debug_embedding.py  decode_zh_tokens.py  download_and_test_zh.py  test_base_all_en.py  test_decode_base.py  test_decode_strategies.py  test_funasr_maclaw.py  test_hf_generate.py  test_hf_official.py  test_maclaw_real.py  test_moonshine_official.py  test_moonshine_zh_pipeline.py  test_real_human_asr.py  test_short_vs_long.py  verify_rope.py
RapidSpeech.cpp/server/: rs_server.cpp
RapidSpeech.cpp/test/real_speech/: maclaw.m4a
_tmp/: main.go
cmd/maclaw-tool/: audit_record.go  main.go  security_check.go
corelib/: app_config.go  types.go  types_property_test.go
corelib/agent/: background_loop_manager.go  llm_helper.go  types.go
corelib/asr/: decoder.go  detokenize.go  encoder.go  im_voice_test.go  manager.go  moonshine.go  moonshine_test.go
corelib/audioconv/: opus.go  silk.go
corelib/bm25/: bm25.go
corelib/brand/: brand.go  brand_default.go  brand_qianxin.go
corelib/browser/: discover.go  flow_types.go  ocr_composite.go  ocr_llm_vision.go  ocr_rapidocr.go  recorder.go  replay_background.go  replayer.go  retry_strategy.go  task_supervisor.go  task_tools.go  task_types.go  task_verifier.go  tools.go
corelib/clawnet/: auto_picker.go  client.go  error_format.go  nutshell.go  process_alive_other.go  process_alive_windows.go
corelib/codegenproxy/: convert.go  server.go  server_test.go
corelib/config/: manager.go
corelib/configfile/: all_tools.go  all_tools_test.go  claude.go  claude_hook_injector.go  claude_hook_injector_test.go  claude_onboarding.go  context_injector.go
corelib/embedding/: gemma.go  gemma_cgo.go  gemma_infer.go  gemma_test.go  init.go  tokenizer.go
corelib/freeproxy/: adapter.go  adapter_chatgpt.go  adapter_doubao.go  adapter_gemini.go  adapter_kimi.go  cdp.go  dangbei_client.go  poll.go  server.go  wasm_probe_test.go
corelib/i18n/: i18n.go  i18n_test.go
corelib/llm/: client.go  filters.go  stream_filters.go  types.go
corelib/mail/: mailer.go
corelib/memory/: bm25.go  bm25_test.go  compressor.go  store.go  types.go
corelib/memoryshot/: manager.go  manager_test.go  store.go  types.go
corelib/oauth/: callback.go  codegen.go  codegen_qr_test.go  codegen_test.go  oauth.go  oauth_test.go  token.go  usage.go  usage_test.go
corelib/pyenv/: detect.go
corelib/remote/: codex_types.go  failure_learner.go  feedback_injector.go  screen_permission_darwin.go  screen_permission_darwin_nocgo.go  screen_permission_other.go  screenshot.go  screenshot_command_unix.go  screenshot_command_windows.go  screenshot_multimon_windows.go  session_progress_tracker.go  ssh_background_task.go  ssh_dial.go  ssh_pool.go  ssh_session.go  ssh_sftp.go  ssh_types.go  tool_resolver.go  (+1 more)
data/: maclaw-hub.db-shm  maclaw-hub.db-wal
docs/: 00-overview.md  01-desktop-remote-engine.md  02-hub-architecture.md  03-hub-auth-and-admin.md  04-pwa-pocket-ui.md  05-hubcenter-architecture.md  06-pocket-entry-app.md  07-deployment-and-config.md  08-roadmap-and-milestones.md  MOBILE_REMOTE_GUIDE_CN.md  REMOTE_USAGE_AND_DEPLOYMENT.md  browser_replay.md  protocol.md
frontend/: index.html
gui/: _header_temp.txt  adaptive_retry.go  agent_loop_context.go  app.go  app_asr.go  app_clawnet.go  app_codegenproxy.go  app_embedding.go  app_freeproxy.go  app_gossip.go  app_maclaw_llm.go  app_maclaw_llm_test.go  app_nl_skills.go  app_nl_skills_market_test.go  app_swarm_bindings.go  app_wails_bindings.go  auto_upload_trigger.go  auto_upload_trigger_test.go  background_loop_manager.go  background_loop_manager_test.go  browser_replay_scheduler.go  capability_gap_detector.go  clawnet_auto_task_picker.go  clawnet_client.go  clawnet_process_other.go  clawnet_process_windows.go  clean_lock_darwin.go  conversation_archiver.go  corelib_aliases.go  drift_detector.go  experience_extractor.go  goal_anchor.go  gossip_auto_publish.go  gossip_client.go  harness_progress_tracker.go  hub_http_client.go  im_attachment.go  im_conversation_memory.go  im_conversation_memory_test.go  im_conversation_trim.go  (+86 more)
hub/: README.md  build.cmd  start.sh
hubcenter/: README.md  build.cmd  start.sh
mobile/: README.md
openclaw-bridge/: README.md  config.example.json  package.json
tui/: agent_handler.go  agent_tools.go  agent_tools_ssh.go  app.go  app_memoryshot_test.go  coding_tool_health.go  config_watcher.go  gossip_detector.go  main.go  qqbot_gateway.go  session_manager.go  session_pty_other.go  session_pty_windows.go  telegram_gateway.go  tool_launch_env.go  tool_launcher.go
(+445 files in other folders)
